hphp/hack/test/typecheck/instanceof/instanceof_generic_bad_2.php.exp
File "instanceof_generic_bad_2.php", line 11, characters 12-13:
Invalid return type (Typing[4110])
File "instanceof_generic_bad_2.php", line 9, characters 40-40:
This is a value of generic type T
File "instanceof_generic_bad_2.php", line 9, characters 33-33:
It is incompatible with an object of type I
